--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
   <meta name="format-detection" content="telephone=no,address=no">
   <meta name="apple-mobile-web-app-status-bar-style" content="white">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
-  <title>n</title>
+  <title>叮当百宝箱</title>
   <script><%= htmlWebpackPlugin.options.script %></script>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+  </div>
 </body>
 </html>
